# pfdelta

./: README.md  copy_pyproject.toml  docs_gridfm_integration_plan.md  pyproject.toml  vercel.json
.jupyter_config/: migrated
core/datasets/: data_stats.py  data_stats_more.py  pfdelta_dataset.py  pfdelta_gridfm.py  pfdelta_variants.py
core/models/: gat.py  graph_conv.py  graph_moe.py  graph_moe_implementation_plan.md  graph_moe_v01_baseline.py  graph_moe_v02_size_only.py  graph_moe_v03_learned_router.py  graph_moe_v04_dual_router.py  graph_moe_v05_dense_gate.py  graph_moe_v06_noisy_topk.py  graph_moe_v07_gumbel.py  graph_moe_v08_hierarchical.py  graph_moe_v09_hop_mixed.py  graph_moe_v10_tag_only.py  graph_moe_v11_sage_only.py  graph_moe_v12_weak_strong.py  graph_moe_v13_confidence_gate.py  graph_moe_v14_size_temp_low.py  (+20 more)
docs/: gridfm_integration.md  gridfm_integration_plan.md
notebooks/: dataset_quickstart_guide.ipynb  dirichlet_grouped_test_case_viz.ipynb  ojas_feb0126_find_best_run.py  ojas_feb0126_test_case_viz.ipynb  ojas_feb0126_test_case_viz_interactive.ipynb  ojas_jan0726_find_best_run.py  ojas_jan0726_test_case_viz.ipynb  ojas_poster_viz.ipynb  plot_dirichlet_energy.ipynb  plot_many_dimensions.ipynb
scripts/: automate_dirichlet_energy.py  automate_dirichlet_energy_v2.py  automate_dirichlet_energy_v3.py  calculate_inference.py  extract_dirichlet_energy.py  failure_mode_computation.py  failure_mode_per_bus.py  failure_mode_plot.py  get_data_stats.py  gridfm_smoke_test.py  ojas_test_combined_on_single_set.py  plot_results.py  task31_plot.py  test_gridfm.py
(+3879 files in other folders)
